objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyNoteConvertedLastModifiedDateTime__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>